# ocean-rs

./: .gitattributes  .gitignore  .gitmodules  .rumdl.toml  AGENTS.md  Cargo.toml  README.md  flake.nix  imp.lib
.imp/gits/: config.nix
.imp/tasks/: task-01A.md
assets/environment_maps/: kloppenheim_01_puresky_4k_cubemap.ktx2  kloppenheim_01_puresky_4k_diffuse.ktx2  kloppenheim_01_puresky_4k_specular.ktx2  table_mountain_2_puresky_4k_cubemap.ktx2  table_mountain_2_puresky_4k_diffuse.ktx2  table_mountain_2_puresky_4k_specular.ktx2
assets/models/Kenney_pirate/: ship_dark.gltf
assets/models/dutch_ship_medium_1k/: README.md
assets/shaders/: ocean.wgsl
assets/textures/coast_sand_01_1k/: README.md
crates/core/: Cargo.toml
crates/core/src/: lib.rs
crates/core/src/ocean/: material.rs  mesh.rs  mod.rs  ocean.wgsl  waves.rs
crates/harness/: Cargo.toml
crates/harness/src/: cleanup.rs  config.rs  headless.rs  image_copy.rs  lib.rs  plugin.rs  presets.rs  state.rs  systems.rs
crates/visualizations/: Cargo.toml
crates/visualizations/examples/: .gitignore  01_flat_ocean.rs  02_gerstner_single.rs  03_gerstner_multi.rs  04_fresnel.rs  05_skybox_reflect.rs  cube.rs
crates/visualizations/examples/common/: mod.rs
crates/visualizations/src/: lib.rs
docs/: other.md  test.md
nix/bundles/: md-docs.config.nix
nix/bundles/bevy/: default.nix
nix/bundles/cargo-rail/: SKILL.md  default.nix
nix/bundles/cargo-rail/references/: config.md  migrate-hakari.md
nix/bundles/imp-lint/: default.nix
nix/bundles/md-docs/: default.nix
nix/bundles/rust/: default.nix
nix/flake/: default.nix
nix/outputs/perSystem/: checks.nix  formatter.nix
nix/outputs/perSystem/devShells.d/: 20-bevy.nix
nix/outputs/perSystem/formatter.d/: rust.nix
nix/outputs/perSystem/packages.d/cargo-rail/: SKILL.md  package.nix
nix/outputs/perSystem/packages.d/cargo-rail/references/: commands.md
refs/abyssal/: abyssal.md
