[workspace]
resolver = "3"
members = ["crates/*"]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
# repository = "@repository@"

[workspace.dependencies]
anyhow = "1.0"

# default = ["2d", "3d", "ui"] includes: rendering, pbr, gltf, audio, scenes, etc.
bevy = { version = "0.18", features = ["wayland"] }
clap = { version = "4", features = ["derive"] }
crossbeam-channel = "0.5"
image = "0.25"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
lto = "thin"
