[workspace]
resolver = "3"
members = ["crates/*"]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
# repository = "@repository@"

[workspace.dependencies]
# default = ["2d", "3d", "ui"] includes: rendering, pbr, gltf, audio, scenes, etc.
bevy = { version = "0.18", features = ["wayland"] }
clap = { version = "4", features = ["derive"] }
crossbeam-channel = "0.5"
image = "0.25"
tracing-subscriber = "0.3"

[workspace.lints.rust]
unused_crate_dependencies = "warn"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
lto = "thin"
