[package]
name = "ocean-visualizations"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[dependencies]
bevy.workspace = true
crossbeam-channel.workspace = true
image.workspace = true
ocean-core = { path = "../core" }

[[example]]
name = "cube"

[[example]]
name = "01_flat_ocean"
